# hardsploit

./: README.md  pyproject.toml
data/: 50-Hardsploit.rules
examples/: test_firmware_update.py  test_i2c.py  test_nrf24l01.py  test_spi.py  test_swd.py  test_uart_console.py
hardsploit/core/: __init__.py  api.py  communication.py  constants.py  errors.py  firmware.py  utils.py
hardsploit/firmwares/: __init__.py
hardsploit/firmwares/fpga/: version.py
hardsploit/firmwares/fpga/can/CAN_INTERACT/: HARDSPLOIT_FIRMWARE_FPGA_CAN_INTERACT.rpd
hardsploit/firmwares/fpga/can/CAN_SNIFFER/: HARDSPLOIT_FIRMWARE_FPGA_CAN_SNIFFER.rpd
hardsploit/firmwares/uc/: version.py
hardsploit/modules/: __init__.py
hardsploit/modules/can/: can.py  can_interact.py
hardsploit/modules/i2c/: i2c.py  i2c_sniffer.py  i2c_sniffer.rb
hardsploit/modules/spi/: nrf24l01.py  spi.py  spi_sniffer.py
hardsploit/modules/swd/: swd.py  swd_debug.py  swd_mem_ap.py  swd_stm32.py
hardsploit/modules/uart/: uart.py
